# compiler

./: .gitattributes  .gitignore  CMakeLists.txt  GUIDELINES.md  IDEAS.md  LICENSE
src/: compiler.c  compiler.h  main.c
src/ast/: position.c  position.h  tree.c  tree.h
src/basic/: dynamic_array.c  dynamic_array.h  file.c  file.h  hash_table.c  hash_table.h  map.c  map.h  message.c  message.h  string.c  string.h
src/syntax/: parsing.c  parsing.h  scanning.c  scanning.h
